# fluid_sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fluid_sim_io.py  paraview_fluid_sim_hdf5_reader.py
config/: default.json  default_frame.h5  default_state.json  template_case.py
include/fluid_sim/: cell_cloud.hpp  gpu_vector.hpp  hdf5_writer.hpp  simulation.hpp  xdmf_writer.hpp
preprocessor/: pyproject.toml
preprocessor/fluid_sim_io/: __init__.py  _deps.py  grid.py  hdf5_io.py  json_io.py  paths.py  types.py
preprocessor/fluid_sim_io.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
solver/: .clang-format  CMakeLists.txt
solver/src/: main.cpp
solver/src/io/: IO.cpp  IO.hpp  console_log.hpp  grid.cpp  grid.hpp  hdf5_common.cpp  hdf5_common.hpp  hdf5_writer.cpp  hdf5_writer.hpp  simulation_types.hpp  xdmf_writer.cpp
solver/src/math/: vector.hpp
solver/src/simulation/: cell_cloud.hpp  gpu_vector.hpp  simulation.cu  simulation.hpp
src/: hdf5_writer.cpp  main.cpp  simulation.cu  xdmf_writer.cpp
src/io/: IO.cpp  IO.hpp  frame_dump.cpp  hdf5_writer.cpp  hdf5_writer.hpp  simulation_types.hpp  xdmf_writer.cpp  xdmf_writer.hpp
src/math/: vector.hpp
src/simulation/: cell_cloud.hpp  simulation.cu  simulation.hpp  simulation_types.hpp
testing/dambreak/: dambreak.py
testing/minimal_example/: run_example_case.py
testing/minimal_example/example_case/: example_sim.json  init_frame.h5  init_state.json
testing/vortex_ring/: vortex_ring.py
testing/vortex_test/: vortex_test.py
