[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-sim-io"
version = "0.1.0"
description = "Python dataclasses and IO helpers for the rectangular fluid simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "h5py",
]

[tool.setuptools]
packages = ["fluid_sim_io"]
